--- a/.github/workflows/auth.yml
+++ b/.github/workflows/auth.yml
@@ -32,7 +32,11 @@ jobs:
 
 
       - name: Login to Azure
-        run: az login --service-principal -u ${{ secrets.ARM_CLIENT_ID }} -p ${{ secrets.ARM_CLIENT_SECRET }} --tenant ${{ secrets.ARM_TENANT_ID }}
+       uses: Azure/login@v1
+        with:
+          client-id: ${{secrets.ARM_CLIENT_ID}}
+          client-secret: ${{ secrets.ARM_CLIENT_SECRET }}
+          tenant-id: ${{secrets.ARM_TENANT_ID}}
 
       - name: Get GitHub Actor
         run: |
